--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/chinedufn/load-collada-dae#readme",
   "devDependencies": {
+    "collada-dae-parser": "^0.9.0",
     "get-pixels": "^3.3.0",
     "gl": "^4.0.2",
     "image-diff": "^1.6.3",
