--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gl": "^4.0.2",
     "gl-mat3": "^1.0.0",
     "gl-mat4": "^1.1.4",
+    "gl-quat": "^1.0.0",
     "image-diff": "^1.6.3",
     "ndarray": "^1.0.18",
     "save-pixels": "^2.3.4",
