--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ndarray": "^1.0.18",
     "save-pixels": "^2.3.4",
     "standard": "^8.4.0",
-    "tape": "^4.6.2"
+    "tape": "^4.6.2",
+    "webgl-debug": "^1.0.2"
   }
 }
