Try installing imagemagick

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ addons:
       - libosmesa6
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+  - apt-get install imagemagick
