--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ addons:
       - libosmesa6
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
-  - apt-get install imagemagick
+  - sudo apt-get install imagemagick
