--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "collada-dae-parser": "^0.9.0",
     "gl": "^4.0.2",
     "gl-mat3": "^1.0.0",
-    "gl-mat4": "^1.1.4",
     "gl-quat": "^1.0.0",
     "image-diff": "^1.6.3",
     "ndarray": "^1.0.18",
@@ -43,6 +42,7 @@
   },
   "dependencies": {
     "get-attributes-uniforms": "^1.1.1",
-    "gl-vec3": "^1.0.3"
+    "gl-vec3": "^1.0.3",
+    "gl-mat4": "^1.1.4",
   }
 }
