--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   "dependencies": {
     "get-attributes-uniforms": "^1.1.1",
     "gl-vec3": "^1.0.3",
-    "gl-mat4": "^1.1.4",
+    "gl-mat4": "^1.1.4"
   }
 }
