--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webgl-debug": "^1.0.2"
   },
   "dependencies": {
+    "create-draw-function": "0.0.1",
     "expand-vertex-data": "^1.0.1",
     "get-attributes-uniforms": "^1.1.1",
     "gl-mat4": "^1.1.4",
